[package]
name = "backet-orders"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
crypto-botters = { version = "0.6.0", features = ["bybit"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
